; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_en_clock.c_mlx4_en_remove_timestamp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_en_clock.c_mlx4_en_remove_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_en_dev = type { i32* }

@.str = private unnamed_addr constant [13 x i8] c"removed PHC\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx4_en_remove_timestamp(%struct.mlx4_en_dev* %0) #0 {
  %2 = alloca %struct.mlx4_en_dev*, align 8
  store %struct.mlx4_en_dev* %0, %struct.mlx4_en_dev** %2, align 8
  %3 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %2, align 8
  %4 = getelementptr inbounds %struct.mlx4_en_dev, %struct.mlx4_en_dev* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %2, align 8
  %9 = getelementptr inbounds %struct.mlx4_en_dev, %struct.mlx4_en_dev* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @ptp_clock_unregister(i32* %10)
  %12 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %2, align 8
  %13 = getelementptr inbounds %struct.mlx4_en_dev, %struct.mlx4_en_dev* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  %14 = load %struct.mlx4_en_dev*, %struct.mlx4_en_dev** %2, align 8
  %15 = call i32 @mlx4_info(%struct.mlx4_en_dev* %14, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @ptp_clock_unregister(i32*) #1

declare dso_local i32 @mlx4_info(%struct.mlx4_en_dev*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
